--- a/TravelTool/Base.lproj/Main.storyboard
+++ b/TravelTool/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--FCViewController-->
+        <!--LiveMessageViewController-->
         <scene sceneID="moX-1M-48c">
             <objects>
-                <viewController title="FCViewController" id="uMT-A3-F60" customClass="FCViewController" customModule="FriendlyChatSwift" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="FCViewController" id="uMT-A3-F60" userLabel="LiveMessageViewController" customClass="LiveMessageViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="yPS-DS-Klf"/>
                         <viewControllerLayoutGuide type="bottom" id="X8X-0F-Bdi"/>
@@ -29,7 +29,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <visualEffectView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soz-qM-lu1">
+                            <visualEffectView opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="soz-qM-lu1" userLabel="Background Blur">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="qh4-Oq-lbs">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
@@ -50,12 +50,9 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
-                                        <connections>
-                                            <action selector="signOut:" destination="uMT-A3-F60" eventType="touchUpInside" id="Adq-Cs-4xZ"/>
-                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friendly Chat" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CUI-XH-ETH">
-                                        <rect key="frame" x="0.0" y="1" width="200" height="35.5"/>
+                                        <rect key="frame" x="0.0" y="1" width="200" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="200" id="K4h-1Y-mSS"/>
                                         </constraints>
@@ -74,7 +71,7 @@
                                     <constraint firstAttribute="height" constant="40" id="lcD-f1-KBk"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="DHD-HU-kCB">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="DHD-HU-kCB" userLabel="Messages Table">
                                 <rect key="frame" x="16" y="92" width="382" height="716"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -101,18 +98,11 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
-                                <connections>
-                                    <outlet property="dataSource" destination="uMT-A3-F60" id="spu-3o-Gv3"/>
-                                    <outlet property="delegate" destination="uMT-A3-F60" id="cjd-Hd-tIf"/>
-                                </connections>
                             </tableView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="message" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="STK-FK-gn5" userLabel="TextField">
                                 <rect key="frame" x="48" y="816" width="296" height="30"/>
                                 <fontDescription key="fontDescription" name="RobotoMono-Regular" family="Roboto Mono" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="uMT-A3-F60" id="5FI-zi-SaF"/>
-                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wv1-bL-LxQ">
                                 <rect key="frame" x="352" y="816" width="46" height="30"/>
@@ -123,19 +113,13 @@
                                 <state key="normal" title="SEND">
                                     <color key="titleColor" red="1" green="0.54117647058823526" blue="0.396078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <connections>
-                                    <action selector="didSendMessage:" destination="uMT-A3-F60" eventType="touchUpInside" id="QTo-o6-7gd"/>
-                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nhb-8J-WZ5">
-                                <rect key="frame" x="16" y="819" width="24" height="24"/>
+                                <rect key="frame" x="16" y="820" width="24" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="24" id="1IF-84-GVk"/>
                                 </constraints>
                                 <state key="normal" title="Image Message" image="ic_add_a_photo"/>
-                                <connections>
-                                    <action selector="didTapAddPhoto:" destination="uMT-A3-F60" eventType="touchUpInside" id="vaN-73-ycr"/>
-                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gLD-jV-qSR">
                                 <rect key="frame" x="16" y="92" width="382" height="712"/>
@@ -149,9 +133,6 @@
                                 <state key="normal" title="SIGN IN">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <action selector="showLoginView:" destination="uMT-A3-F60" eventType="touchUpInside" id="x2T-EN-RU0"/>
-                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -188,29 +169,20 @@
                         </connections>
                     </view>
                     <connections>
-                        <outlet property="backgroundBlur" destination="soz-qM-lu1" id="LbG-yC-f5o"/>
-                        <outlet property="dismissImageRecognizer" destination="uGd-VQ-oms" id="lPc-Jm-MBq"/>
-                        <outlet property="dismissKeyboardRecognizer" destination="yKK-fC-WS7" id="eHi-HY-cPL"/>
-                        <outlet property="imageDisplay" destination="gLD-jV-qSR" id="BIC-xb-d4g"/>
-                        <outlet property="imageMessage" destination="nhb-8J-WZ5" id="URE-rb-Q5L"/>
-                        <outlet property="messageTextField" destination="STK-FK-gn5" id="pFG-OR-l4d"/>
-                        <outlet property="messagesTable" destination="DHD-HU-kCB" id="vzo-3i-3hj"/>
-                        <outlet property="sendButton" destination="wv1-bL-LxQ" id="NjU-mG-4FR"/>
-                        <outlet property="signInButton" destination="saZ-zf-ltO" id="Xkm-hX-pcq"/>
-                        <outlet property="signOutButton" destination="6uD-8t-BBQ" id="UQa-AU-kNP"/>
+                        <outlet property="backgroundBlur" destination="soz-qM-lu1" id="Lip-aV-Z49"/>
+                        <outlet property="dismissImageRecognizer" destination="uGd-VQ-oms" id="BIo-Bj-XYJ"/>
+                        <outlet property="dismissKeyboardRecognizer" destination="yKK-fC-WS7" id="NVG-Ig-WMp"/>
+                        <outlet property="imageDisplay" destination="gLD-jV-qSR" id="DUN-s7-WfS"/>
+                        <outlet property="messageTextField" destination="STK-FK-gn5" id="Ecg-Bg-VzC"/>
+                        <outlet property="messagesTable" destination="DHD-HU-kCB" id="wu3-D7-t29"/>
+                        <outlet property="sendButton" destination="wv1-bL-LxQ" id="Sn6-Xk-Ml2"/>
+                        <outlet property="signInButton" destination="saZ-zf-ltO" id="105-G5-rhx"/>
+                        <outlet property="signOutButton" destination="nhb-8J-WZ5" id="LFj-c2-otB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dLT-eE-jeg" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer enabled="NO" id="yKK-fC-WS7">
-                    <connections>
-                        <action selector="tappedView:" destination="uMT-A3-F60" id="Trg-68-184"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <tapGestureRecognizer enabled="NO" id="uGd-VQ-oms">
-                    <connections>
-                        <action selector="dismissImageDisplay:" destination="uMT-A3-F60" id="Vsh-lf-3Vg"/>
-                    </connections>
-                </tapGestureRecognizer>
+                <tapGestureRecognizer enabled="NO" id="uGd-VQ-oms" userLabel="Dismiss Image Recognizer"/>
+                <tapGestureRecognizer enabled="NO" id="yKK-fC-WS7" userLabel="Dismiss Keyboard Recognizer"/>
             </objects>
             <point key="canvasLocation" x="655" y="53"/>
         </scene>
