--- a/TravelTool/View/Base.lproj/Main.storyboard
+++ b/TravelTool/View/Base.lproj/Main.storyboard
@@ -17,85 +17,6 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Login View Controller-->
-        <scene sceneID="ybV-Sv-OvB">
-            <objects>
-                <viewController id="kZg-ex-pAs" userLabel="Login View Controller" customClass="LoginViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="lA1-zw-CsI"/>
-                        <viewControllerLayoutGuide type="bottom" id="0wE-Td-o3L"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="LmA-zH-og8">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Lu6-z8-L2K">
-                                <rect key="frame" x="57" y="52" width="300" height="212"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-u" translatesAutoresizingMaskIntoConstraints="NO" id="jAh-lQ-bLU">
-                                        <rect key="frame" x="0.0" y="0.0" width="300" height="62"/>
-                                    </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MPz-Yc-1wF">
-                                        <rect key="frame" x="0.0" y="62" width="300" height="150"/>
-                                        <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="co2-Ub-eeG">
-                                                <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="aDV-e6-mcv"/>
-                                                </constraints>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits" textContentType="email"/>
-                                            </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kIX-Yx-Mar">
-                                                <rect key="frame" x="0.0" y="50" width="300" height="50"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="c1b-VJ-GqR"/>
-                                                </constraints>
-                                                <nil key="textColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits"/>
-                                            </textField>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iIc-4c-Dei">
-                                                <rect key="frame" x="0.0" y="100" width="300" height="50"/>
-                                                <color key="backgroundColor" red="0.31022167210000001" green="0.67031490800000004" blue="0.89806777240000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="50" id="mxA-Kz-nP8"/>
-                                                </constraints>
-                                                <state key="normal" title="LOG IN">
-                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                            </button>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="300" id="m0Y-m3-T8A"/>
-                                        </constraints>
-                                    </stackView>
-                                </subviews>
-                            </stackView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="e04-Rs-d31" userLabel="Activity Indicator">
-                                <rect key="frame" x="197" y="438" width="20" height="20"/>
-                            </activityIndicatorView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="Lu6-z8-L2K" firstAttribute="top" secondItem="lA1-zw-CsI" secondAttribute="bottom" constant="8" id="P6w-dm-ixk"/>
-                            <constraint firstItem="Lu6-z8-L2K" firstAttribute="centerX" secondItem="LmA-zH-og8" secondAttribute="centerX" id="hVo-4X-uWq"/>
-                            <constraint firstItem="e04-Rs-d31" firstAttribute="centerX" secondItem="LmA-zH-og8" secondAttribute="centerX" id="n5h-zR-ZPF"/>
-                            <constraint firstItem="e04-Rs-d31" firstAttribute="centerY" secondItem="LmA-zH-og8" secondAttribute="centerY" id="pKS-nh-eBO"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="activityIndicator" destination="e04-Rs-d31" id="A4z-Dy-mDh"/>
-                        <outlet property="email" destination="co2-Ub-eeG" id="o4f-im-EWl"/>
-                        <outlet property="loginBtn" destination="iIc-4c-Dei" id="0tI-pP-hNG"/>
-                        <outlet property="password" destination="kIX-Yx-Mar" id="cRv-WM-BeF"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="oGI-Xv-n8f" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-237.68115942028987" y="52.901785714285715"/>
-        </scene>
         <!--LiveMessageViewController-->
         <scene sceneID="moX-1M-48c">
             <objects>
@@ -152,6 +73,9 @@
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="sfw-kd-zDS" kind="show" id="Fou-rh-VTB"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0078431372550000003" green="0.53333333329999999" blue="0.81960784310000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -304,12 +228,35 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="829" y="42"/>
+            <point key="canvasLocation" x="828.98550724637687" y="41.517857142857139"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="0yX-39-Voo">
+            <objects>
+                <viewController id="sfw-kd-zDS" userLabel="Map View Controller" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ey5-JR-tGr"/>
+                        <viewControllerLayoutGuide type="bottom" id="SJ9-3S-Zs2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yRv-c2-pUl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QJV-vF-gzA">
+                                <rect key="frame" x="0.0" y="52" width="414" height="802"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ojM-WN-emD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1653.6231884057972" y="41.517857142857139"/>
         </scene>
     </scenes>
     <resources>
         <image name="ic_account_circle" width="24" height="24"/>
         <image name="ic_add_a_photo" width="24" height="24"/>
-        <image name="logo-u" width="62" height="62"/>
     </resources>
 </document>
