--- a/TravelTool/View/Base.lproj/Main.storyboard
+++ b/TravelTool/View/Base.lproj/Main.storyboard
@@ -233,7 +233,7 @@
         <!--Map View Controller-->
         <scene sceneID="0yX-39-Voo">
             <objects>
-                <viewController id="sfw-kd-zDS" userLabel="Map View Controller" sceneMemberID="viewController">
+                <viewController id="sfw-kd-zDS" userLabel="Map View Controller" customClass="MapViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ey5-JR-tGr"/>
                         <viewControllerLayoutGuide type="bottom" id="SJ9-3S-Zs2"/>
@@ -249,10 +249,31 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="QJV-vF-gzA" id="c9i-pU-KZT"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ojM-WN-emD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1653.6231884057972" y="41.517857142857139"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="x4r-0l-fSj">
+            <objects>
+                <viewController id="Zm8-hw-4hH" userLabel="Detail View Controller" customClass="DetailViewController" customModule="TravelTool" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EIr-3A-DKl"/>
+                        <viewControllerLayoutGuide type="bottom" id="dy4-26-NQ0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yNg-dA-kwA">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hCQ-Gq-Wgg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2498.5507246376815" y="41.517857142857139"/>
         </scene>
     </scenes>
     <resources>
